--- a/app/src/main/res/layout/layout_music_notification.xml
+++ b/app/src/main/res/layout/layout_music_notification.xml
@@ -3,110 +3,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingHorizontal="16dp"
-    android:paddingVertical="6dp">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginBottom="8dp"-->
-    <!--        android:gravity="center_vertical"-->
-    <!--        android:orientation="horizontal">-->
+    <!-- 歌曲封面图 -->
+    <ImageView
+        android:id="@+id/ivCover"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="12dp"
+        android:scaleType="centerCrop" />
 
-    <!--        <ImageView-->
-    <!--            android:layout_width="18dp"-->
-    <!--            android:layout_height="18dp"-->
-    <!--            android:layout_marginEnd="4dp"-->
-    <!--            android:src="@drawable/ic_music_notification" />-->
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="72dp">
 
-    <!--        <TextView-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="@string/app_name"-->
-    <!--            android:textColor="@color/music_notification_sub_title"-->
-    <!--            android:textSize="10sp" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-    <!--    </LinearLayout>-->
+            <!-- 歌曲名称 -->
+            <TextView
+                android:id="@+id/tvSongName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/music_notification_title"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:text="歌名" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/ivCover"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginEnd="12dp"
-            android:scaleType="centerCrop" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="72dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <!-- 歌曲作者 -->
+            <TextView
+                android:id="@+id/tvAuthor"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/music_notification_sub_title"
+                android:textSize="12sp"
+                tools:text="作者" />
 
-                <TextView
-                    android:id="@+id/tvSongName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    tools:text="故乡" />
-
-                <TextView
-                    android:id="@+id/tvAuthor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textSize="12sp"
-                    tools:text="许巍" />
-            </LinearLayout>
+        </LinearLayout>
 
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/ivPre"-->
-                <!--                    android:layout_width="28dp"-->
-                <!--                    android:layout_height="28dp"-->
-                <!--                    android:layout_gravity="start"-->
-                <!--                    android:padding="6dp"-->
-                <!--                    android:src="@drawable/ic_music_notification_pre" />-->
+            <!-- 上一首 按钮 -->
+            <ImageView
+                android:id="@+id/ivPre"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="start"
+                android:padding="6dp"
+                android:src="@drawable/ic_music_notification_pre" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/ivPlay"-->
-                <!--                    android:layout_width="28dp"-->
-                <!--                    android:layout_height="28dp"-->
-                <!--                    android:layout_gravity="center"-->
-                <!--                    android:padding="3.5dp"-->
-                <!--                    android:src="@drawable/ic_music_notification_play" />-->
+            <!-- 播放/暂停 按钮 -->
+            <ImageView
+                android:id="@+id/ivPlay"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:padding="3.5dp"
+                android:src="@drawable/ic_music_notification_play" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/ivNext"-->
-                <!--                    android:layout_width="28dp"-->
-                <!--                    android:layout_height="28dp"-->
-                <!--                    android:layout_gravity="end"-->
-                <!--                    android:padding="6dp"-->
-                <!--                    android:src="@drawable/ic_music_notification_next" />-->
+            <!-- 下一首 按钮 -->
+            <ImageView
+                android:id="@+id/ivNext"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="end"
+                android:padding="6dp"
+                android:src="@drawable/ic_music_notification_next" />
 
-            </FrameLayout>
+        </FrameLayout>
 
-        </RelativeLayout>
-    </LinearLayout>
+    </RelativeLayout>
+
 
 </LinearLayout>
